--- a/q/274288.html
+++ b/q/274288.html
@@ -26,20 +26,21 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>109</td><td>C gcc</td><td>240724T225036Z</td><td><a href="https://codegolf.stackexchange.com/questions/274288/compute-dickman/274423#274423">engineer</a></td></tr>
+<tr d-ix="0"><td>098</td><td>C gcc</td><td>240724T225036Z</td><td><a href="https://codegolf.stackexchange.com/questions/274288/compute-dickman/274423#274423">engineer</a></td></tr>
 <tr d-ix="1"><td>026</td><td>Charcoal</td><td>240720T070451Z</td><td><a href="https://codegolf.stackexchange.com/questions/274288/compute-dickman/274293#274293">Neil</a></td></tr>
 <tr d-ix="2"><td>022</td><td>Pyth</td><td>240725T230147Z</td><td><a href="https://codegolf.stackexchange.com/questions/274288/compute-dickman/274445#274445">CursorCo</a></td></tr>
 <tr d-ix="3"><td>141</td><td>Python</td><td>240722T035101Z</td><td><a href="https://codegolf.stackexchange.com/questions/274288/compute-dickman/274316#274316">Bubbler</a></td></tr>
 <tr d-ix="4"><td>096</td><td>K ngn/k</td><td>240722T100340Z</td><td><a href="https://codegolf.stackexchange.com/questions/274288/compute-dickman/274321#274321">Bubbler</a></td></tr>
 <tr d-ix="5"><td>058</td><td>JavaScript Node.js</td><td>240722T084413Z</td><td><a href="https://codegolf.stackexchange.com/questions/274288/compute-dickman/274319#274319">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, <sup><s>112</s></sup> <sup><s>110</s></sup> 109 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, <sup><s>112</s></sup> <sup><s>110</s></sup> <sup><s>109</s></sup> 98 bytes</h1>
 <p><em>-2 thanks to <a href="https://codegolf.stackexchange.com/users/76323/l4m2">@l4m2</a></em></p>
 <p><em>-1 thanks to <a href="https://codegolf.stackexchange.com/users/52904/ceilingcat">@ceilingcat</a></em></p>
+<p><em>-11 thanks to <a href="https://codegolf.stackexchange.com/users/81203/att">@att</a></em></p>
 
-<pre class="lang-c prettyprint-override"><code>double k(double u){int V=2e4,i=0;double L[V*8],l=*L=1;for(;i++&lt;u*V-V;L[i]=l-=L[i&gt;V?i-V:0]/(i+V-1));return l;}
+<pre class="lang-c prettyprint-override"><code>V=2e4,i;double k(double u){double L[V*8],l=1;for(i=V;i&lt;u*V;L[i]=l-=(i&lt;2*V?:L[i-V])/i++);return l;}
 </code></pre>
-<p><a href="https://tio.run/##lVVrb5tIFP3Or7hyZQkwJgOYVwmpskoqVaWrarNrrZRaEcFDPBs8oGFIusr6t3tnYHDcdbRS@WDgzr3nvs7BxfyhKPb7dd3dVxgedfXQGS@EclimLl5YJEWJsme3SzNaWVVqZqmTlDXTEzKbnXfmcr5MsluySqt5Ku4Xyw9kvnyPVmc6mS3njmEkDPOOUaiS3f4doUXVrTGct3x9X9eVvbnQXo3bnG9@tAg3Up@YKnIvbRr/u8FrXIKqUTevPpcdLQzVjJFo2pmpgQm/45a3wDcYmrxt8RquSPG4zelcAP7COvIXBRnISU2hawl96H3x93zbCFwuoqHIW9zaEuwKc8y2hOIWSNk7HmJJC8@EbwgFZDtTqIfjomYMFxxy2j5jBmJ4kFeVhFIOKlEPf6a9Ey0JdPj1jy/Xf15@@Zpd30CotTznpBBYVBSjGlZxd4Q2HW9vjwJWkMKLY4Fjexa4dmzBwnYt8G3fgtCCaGdp8MY1AtYdfwvxECOhkR16YeD5oef7nuujOJM25MdRGDmOuAVeiMLBiNw49BfhIoxiP3J8V1gPWPIYoShAThQ4juMi33EC4RDZ4cIPgjgW6LEXu9dzCebZrueiIPbQwnUDB13Po2yXaE81Wfd7uhtnqQ9cgMaAlz6XpFu/ftEIZx0W5JBmuQ1dUl6SHcj5UcvidTYbw@Wlxt6PW6D8Z/xkdTJU/L2Ri09PBvuG70MtHRu9RzNOjhvMCkylS5nft7pCnsswA87GTCY4SAw0Sw7hh4eGiS5LfdLoU9utSkMgTW3Hr0pQYEIWg8GAf8STV5XTKWDGavaNTk750tdpyfyWym6NRRqv6YVC9LH0i1TKwhiXUOZViwfPXf8rJ6P3hx9g8vXy5mYC72Hy8fJTNhGIu1HMv3V00LIS8av8GqifhMBykBIeFzWIqicI6@hdTfGBGhYcvnpqy0dDOh6RHAB0oj@9M36qFJwXG3iu2VpK/a1yettRQZKJOXsoLCg2OQPTFC9PY3VHXHUkV6XjQNLDvMcWBVTLGa/XugSQfBPfkyxT1UuMbU6o/r/pVFVSVv1DCo/Dun4U2niutv7a1XhgqRQ9tnIa/hOQqGa/j@xgH9r@3rNR/C8" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##lVVtb5tIEP7Orxi5sgQUExbMWwmtckoqVaWnqOlZJ6VWRPAS7wUvaFmSVql/u28XFsc5RyfVH@xlduaZmWfmwcXsrih2u0Xq4rlFklXd3VYY7nV16IwndcquF2a0tKoUJWXNdJIuEnLamYskuybLtJqlOjl1zcWHd@J5tlgaJ@TtWyNhmHeMQpVsd28ILapuheG05avbuq7s9Xvt2bjJ@fqlRbiR@shUkVtp0/jPBq9wCao83Tz/XHa0MFTlRqJpJ6YGJnzDLW@BrzE0edviFZyT4n6T05kA/IN15B8KMpCTmkLXEnrX@@If@aYRuFxEQ5G3uLUl2DnmmG0IxS2Qsnfcx5IWHglfEwqOjaZQD9dFzRguOOS0fcQMBHWQV5WEUg4qUQ9/or0RLQl0@POvLxd/n325zC6uINRannNSCCwqilENq7gbQpuOt9cHAUtI4QlZgGzPAteOLZjbrgW@7VsQWhBtLQ1e@YyAdcdfQ9zHSGjHDr0w8PzQ833P9Z04kzbHj6MwQkj8BF7ohIPRcePQn4fzMIr9CPmusO6x5LXjRIGDogAh5Do@QoFwiOxw7gdBHAv02Ivdi5kE82zXc50g9py56wbIuZhF2TbRHmqy6ud0M3KpD7sAjQFPfS65bv34RSOcdVgshzTLaeiEciCpkwA5PWhZPIr9VeHyo2jv6RYo/6GfLI9IxT8aOfj0iNhXfO9q6djoPZpxdN1gVmAqXcr8ttUV8kyGGXAyZjIBOYLQLNmH7w8NE12W@qTRp7ZblYZAmtrIr0pQYEIWg8GAX@LkVeV0Cpixmn2nk@N96eu0ZH5LZbfGIo3n9EIh@lj6@1TKwhiHUOZViwfPbf8tmdH7yw8wuTy7uprAO5h8PPuUTQTidhTz144OWlYifpZfA/WDEFgOUsLjoAZR9QvCOnpTU7xfDQv2rzg15QOSDimSBEAn@tM747dKwXmxhsearaTUXyuntx0UJDcxZ3eFBcU6Z2Ca4uFhrO5gV5HcVek4LOme77FFAdVyxuuVLgHkvon3SZap6iXGJidU/990qiopq/6Qwv0wrpdCG@/V1J@7Gi8slaLHVk7Df4IjqtntIjvYhba/82wn/hc" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
 <p>Splits the domain <span class="math-container">\$[1,8]\$</span> across <span class="math-container">\$(8-1)(2*10^4)=140000\$</span> slices and computes each slice's y-value successively based off of the previous y-values.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 26 bytes</h1>
