--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240728T054630Z
+"   /golfscore                                      20240728T085603Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/3434.html">Shortest Game of Life                           : 0003434</a>
 <a href="q/125282.html">Goodbye Cruel World!                            : 0125282</a>
 <a href="q/152860.html">Compare two numbers given as strings            : 0152860</a>
 <a href="q/19065.html">Display Sentence in Alphabetical Order          : 0019065</a>
