--- a/q/274485.html
+++ b/q/274485.html
@@ -26,16 +26,27 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>002</td><td>APL Dyalog Vision</td><td>240728T095611Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274487#274487">Ad&#225;</a></td></tr>
-<tr d-ix="1"><td>002</td><td>Vyxal</td><td>240728T095024Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274486#274486">emanresu</a></td></tr>
+<tr d-ix="0"><td>002</td><td>Vyxal 3</td><td>240728T101335Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274488#274488">RubenVer</a></td></tr>
+<tr d-ix="1"><td>002</td><td>APL Dyalog Vision</td><td>240728T095611Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274487#274487">Ad&#225;</a></td></tr>
+<tr d-ix="2"><td>002</td><td>Vyxal</td><td>240728T095024Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274486#274486">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/abrudz/dyalog_vision/" rel="nofollow noreferrer">APL (Dyalog Vision)</a>, 2 bytes</h1>
+<div id="pu0" class="pu"><h1>Vyxal 3, 2 bytes</h1>
+<pre><code>ut
+</code></pre>
+<p><a href="https://vyxal.github.io/latest.html#WyIiLCIiLCJcIkEtQkFOQUwtQkFOQU5BLUxBQlwiIHV0IiwiIiwiIiwiMy40LjIiXQ==" rel="nofollow noreferrer">try</a></p>
+<ul>
+<li><code>t</code> last of</li>
+<li><code>u</code> unique elements</li>
+<li>of the input</li>
+</ul>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/abrudz/dyalog_vision/" rel="nofollow noreferrer">APL (Dyalog Vision)</a>, 2 bytes</h1>
 
 <pre class="lang-apl prettyprint-override"><code>⊇∪
 </code></pre>
 <p><code>⊇</code> last <code>∪</code> unique</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 2 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 2 bytes</h1>
 <pre><code>Ut
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCJVdCIsIiIsIkEtQkFOQUwtQkFOQU5BLUxBQiJd" rel="nofollow noreferrer">Try it Online!</a></p>
