--- a/q/274485.html
+++ b/q/274485.html
@@ -26,14 +26,22 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>024</td><td>JavaScript ES6</td><td>240728T101535Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274489#274489">Arnauld</a></td></tr>
-<tr d-ix="1"><td>064</td><td>Google Sheets</td><td>240728T102209Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274491#274491">doubleun</a></td></tr>
-<tr d-ix="2"><td>057</td><td>C tcc</td><td>240728T101650Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274490#274490">ovs</a></td></tr>
-<tr d-ix="3"><td>002</td><td>Vyxal 3</td><td>240728T101335Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274488#274488">RubenVer</a></td></tr>
-<tr d-ix="4"><td>002</td><td>APL Dyalog Vision</td><td>240728T095611Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274487#274487">Ad&#225;</a></td></tr>
-<tr d-ix="5"><td>002</td><td>Vyxal</td><td>240728T095024Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274486#274486">emanresu</a></td></tr>
+<tr d-ix="0"><td>026</td><td>Python</td><td>240728T102653Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274492#274492">xnor</a></td></tr>
+<tr d-ix="1"><td>024</td><td>JavaScript ES6</td><td>240728T101535Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274489#274489">Arnauld</a></td></tr>
+<tr d-ix="2"><td>064</td><td>Google Sheets</td><td>240728T102209Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274491#274491">doubleun</a></td></tr>
+<tr d-ix="3"><td>057</td><td>C tcc</td><td>240728T101650Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274490#274490">ovs</a></td></tr>
+<tr d-ix="4"><td>002</td><td>Vyxal 3</td><td>240728T101335Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274488#274488">RubenVer</a></td></tr>
+<tr d-ix="5"><td>002</td><td>APL Dyalog Vision</td><td>240728T095611Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274487#274487">Ad&#225;</a></td></tr>
+<tr d-ix="6"><td>002</td><td>Vyxal</td><td>240728T095024Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274486#274486">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES6), 24 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python</a>, 26 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>lambda s:max(s,key=s.find)
+</code></pre>
+<p><a href="https://tio.run/##K6gsycjPM7YoKPqfZhvzPycxNyklUaHYKjexQqNYJzu10rZYLy0zL0Xzf0FRZl6JRpqGkqOuk6Ofow@Y9HPU9XF0UtLU/A8A" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
+<p>Takes a string as input. <code>str.find</code> outputs the first index where the character appears, so using it as a key for <code>max</code> returns the element whose first occurrence is latest.</p>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript (ES6), 24 bytes</h1>
 <p>Note that it works because <code>Set</code> is guaranteed to maintain the insertion order of its elements.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>s=&gt;[...new Set(s)].pop()
@@ -43,22 +51,23 @@
 <pre class="lang-javascript prettyprint-override"><code>s =&gt;         // s = input string
 [...         // turn into an array ...
   new Set(s) //   ... the set generated from s
+             //       e.g. &quot;BANANA&quot; -&gt; Set {'B','A','N'}
 ]            //
 .pop()       // return the last element
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1>Google Sheets, 64 bytes</h1>
+<div id="pu2" class="pu"><h1>Google Sheets, 64 bytes</h1>
 <pre><code>=chooserows(filter(A:A,1=map(A:A,lambda(β,countif(A1:β,β)))),-1)
 </code></pre>
 <p><img src="https://i.sstatic.net/cWoifoPg.png" alt="screenshot" /></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="http://savannah.nongnu.org/projects/tinycc" rel="nofollow noreferrer">C (tcc)</a>, 57 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="http://savannah.nongnu.org/projects/tinycc" rel="nofollow noreferrer">C (tcc)</a>, 57 bytes</h1>
 
 <pre class="lang-c prettyprint-override"><code>k;f(char*s){for(int v[128]={};*s;s++)k=v[*s]++?k:*s;k=k;}
 </code></pre>
 <p><a href="https://tio.run/##S9YtSU7@/z/bOk0jOSOxSKtYszotv0gjM69EoSza0Mgi1ra61lqr2LpYW1sz27YsWqs4VlvbPtsKKJRtm21d@z83MTNPQ7OaS0GhoLQEZIRGmoaSo66To5@jD5j0c9T1cXRS0tS05qr9DwA" rel="nofollow noreferrer" title="C (tcc) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1>Vyxal 3, 2 bytes</h1>
+<div id="pu4" class="pu"><h1>Vyxal 3, 2 bytes</h1>
 <pre><code>ut
 </code></pre>
 <p><a href="https://vyxal.github.io/latest.html#WyIiLCIiLCJcIkEtQkFOQUwtQkFOQU5BLUxBQlwiIHV0IiwiIiwiIiwiMy40LjIiXQ==" rel="nofollow noreferrer">try</a></p>
@@ -68,13 +77,13 @@
 <li>of the input</li>
 </ul>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/abrudz/dyalog_vision/" rel="nofollow noreferrer">APL (Dyalog Vision)</a>, 2 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/abrudz/dyalog_vision/" rel="nofollow noreferrer">APL (Dyalog Vision)</a>, 2 bytes</h1>
 
 <pre class="lang-apl prettyprint-override"><code>⊇∪
 </code></pre>
 <p><code>⊇</code> last <code>∪</code> unique</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 2 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 2 bytes</h1>
 <pre><code>Ut
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCJVdCIsIiIsIkEtQkFOQUwtQkFOQU5BLUxBQiJd" rel="nofollow noreferrer">Try it Online!</a></p>
