--- a/q/274485.html
+++ b/q/274485.html
@@ -26,18 +26,27 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>015</td><td>Arturo</td><td>240728T112337Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274496#274496">chunes</a></td></tr>
-<tr d-ix="1"><td>003</td><td>Uiua SBCS</td><td>240728T105800Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274495#274495">chunes</a></td></tr>
-<tr d-ix="2"><td>058</td><td>JavaScript Node.js</td><td>240728T104100Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274493#274493">Andrew B</a></td></tr>
-<tr d-ix="3"><td>026</td><td>Python</td><td>240728T102653Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274492#274492">xnor</a></td></tr>
-<tr d-ix="4"><td>024</td><td>JavaScript ES6</td><td>240728T101535Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274489#274489">Arnauld</a></td></tr>
-<tr d-ix="5"><td>064</td><td>Google Sheets</td><td>240728T102209Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274491#274491">doubleun</a></td></tr>
+<tr d-ix="0"><td>064</td><td>Google Sheets</td><td>240728T102209Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274491#274491">doubleun</a></td></tr>
+<tr d-ix="1"><td>015</td><td>Arturo</td><td>240728T112337Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274496#274496">chunes</a></td></tr>
+<tr d-ix="2"><td>003</td><td>Uiua SBCS</td><td>240728T105800Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274495#274495">chunes</a></td></tr>
+<tr d-ix="3"><td>058</td><td>JavaScript Node.js</td><td>240728T104100Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274493#274493">Andrew B</a></td></tr>
+<tr d-ix="4"><td>026</td><td>Python</td><td>240728T102653Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274492#274492">xnor</a></td></tr>
+<tr d-ix="5"><td>024</td><td>JavaScript ES6</td><td>240728T101535Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274489#274489">Arnauld</a></td></tr>
 <tr d-ix="6"><td>057</td><td>C tcc</td><td>240728T101650Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274490#274490">ovs</a></td></tr>
 <tr d-ix="7"><td>002</td><td>Vyxal 3</td><td>240728T101335Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274488#274488">RubenVer</a></td></tr>
 <tr d-ix="8"><td>002</td><td>APL Dyalog Vision</td><td>240728T095611Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274487#274487">Ad&#225;</a></td></tr>
 <tr d-ix="9"><td>002</td><td>Vyxal</td><td>240728T095024Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274486#274486">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 15 bytes</h1>
+<div id="pu0" class="pu"><h1>Google Sheets, 64 bytes</h1>
+<pre><code>=+let(β,A:A,γ,sort(row(β)),sort(β,1=countifs(β,β,γ,&quot;&lt;=&quot;&amp;γ),,γ,))
+</code></pre>
+<p>...or:</p>
+<pre><code>=chooserows(filter(A:A,1=map(A:A,lambda(β,countif(A1:β,β)))),-1)
+</code></pre>
+<p>Put the array in column <code>A1:A</code> and the formula in cell <code>B1</code>.</p>
+<p><img src="https://i.sstatic.net/cWoifoPg.png" alt="screenshot" /></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 15 bytes</h1>
 <pre><code>$=&gt;[last∪&lt;=&amp;]
 </code></pre>
 <p><a href="https://i.sstatic.net/OlBT6a31.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/OlBT6a31.png" alt="running the code in arturo interpreter" /></a></p>
@@ -47,8 +56,9 @@ last   ; last element of...
 ∪      ; union between...
 &lt;=&amp;    ; input and itself              
 </code></pre>
+<p>This is two bytes shorter than <code>last unique&amp;</code>, but requires the latest version for <code>∪</code>, hence it won't work online yet.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a> <sup><a href="https://tinyurl.com/Uiua-SBCS-Apr-12" rel="nofollow noreferrer">SBCS</a></sup>, 3 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a> <sup><a href="https://tinyurl.com/Uiua-SBCS-Apr-12" rel="nofollow noreferrer">SBCS</a></sup>, 3 bytes</h1>
 <pre><code>⊢⇌◴
 </code></pre>
 <p><a href="https://uiua.org/pad?src=0_12_0-dev_3__RiDihpAg4oqi4oeM4pe0CgpGICJBLUJBTkFMLUJBTkFOQS1MQUIiCkYgIjEyMzEyMzMyIgo=" rel="nofollow noreferrer">Try it!</a></p>
@@ -57,20 +67,20 @@ last   ; last element of...
 ⊢⇌   # ‎⁢last
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 58 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 58 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>s=&gt;[a={},b='',[...s].map(e=&gt;(e in a)?0:[a[e]=1,b=e]),b][3]
 </code></pre>
 <p><a href="https://tio.run/##HcqxCsIwEADQX@mWBJJDcROuks6lP3DccK1XqdSkNOIifnsUlze9u7ykTPuyPUPKV60z1oItCb4/fkRjPAFAYXjIZhVbq82SGnGXw5mElPH4W8rOj0wnrlNOJa8Ka77Z2ZoYujjE/u8QQx8741z9Ag" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python</a>, 26 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python</a>, 26 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>lambda s:max(s,key=s.find)
 </code></pre>
 <p><a href="https://tio.run/##K6gsycjPM7YoKPqfZhvzPycxNyklUaHYKjexQqNYJzu10rZYLy0zL0Xzf0FRZl6JRpqGkqOuk6Ofow@Y9HPU9XF0UtLU/A8A" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 <p>Takes a string as input. <code>s.find(c)</code> outputs the first index in <code>s</code> where the character <code>c</code> appears, so using <code>s.find</code> as a key for <code>max</code> returns the character whose first occurrence in <code>s</code> comes latest.</p>
 </div>
-<div id="pu4" class="pu"><h1>JavaScript (ES6), 24 bytes</h1>
+<div id="pu5" class="pu"><h1>JavaScript (ES6), 24 bytes</h1>
 <p>Note that it works because <code>Set</code> is guaranteed to maintain the insertion order of its elements.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>s=&gt;[...new Set(s)].pop()
@@ -84,11 +94,6 @@ last   ; last element of...
 ]            //
 .pop()       // return the last element
 </code></pre>
-</div>
-<div id="pu5" class="pu"><h1>Google Sheets, 64 bytes</h1>
-<pre><code>=chooserows(filter(A:A,1=map(A:A,lambda(β,countif(A1:β,β)))),-1)
-</code></pre>
-<p><img src="https://i.sstatic.net/cWoifoPg.png" alt="screenshot" /></p>
 </div>
 <div id="pu6" class="pu"><h1><a href="http://savannah.nongnu.org/projects/tinycc" rel="nofollow noreferrer">C (tcc)</a>, 57 bytes</h1>
 
