--- a/q/274498.html
+++ b/q/274498.html
@@ -26,10 +26,18 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>072</td><td>JavaScript Node.js</td><td>240728T122454Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274501#274501">l4m2</a></td></tr>
-<tr d-ix="1"><td>013</td><td>Vyxal</td><td>240728T120204Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274499#274499">lyxal</a></td></tr>
+<tr d-ix="0"><td>065</td><td>JavaScript Node.js</td><td>240728T122454Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274501#274501">l4m2</a></td></tr>
+<tr d-ix="1"><td>107</td><td>Google Sheets</td><td>240728T123106Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274502#274502">doubleun</a></td></tr>
+<tr d-ix="2"><td>013</td><td>Vyxal</td><td>240728T120204Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274499#274499">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 72 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 65 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>f=n=&gt;[X=[],1,2].map(i=&gt;n-=X[+i]=Math.random()*801|0)|~n?f(2047):X
+</code></pre>
+<p><a href="https://tio.run/##JcjdCsIgGADQ19E2xY2gn/WtJ@h@MLwQp2VtfkMlRowePQs6l@eunirq4ObEPA4mZwse2r6DXpZVWUs@qZk4aD2Dri@chItKNx6UH3AidLMX1Sro@vZnS2qx3dFjly0GsoBollMlmqJYqEYfcTR8xCuxhNL8wTm5X2bGYlL6waJ7GTj8fQE" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p>Requires <code>2047-a-b-c==-1</code>. Not zero as it confuses initially NaN.</p>
+<p>Use that 800*2&lt;2048, so a==0 would automatically get rejected</p>
+<h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 72 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>R=x=&gt;Math.random()*800+1|0
 f=n=&gt;(a=R())+(b=R())+(c=R())^2048?f():[a,b,c]
@@ -37,7 +45,28 @@ f=n=&gt;(a=R())+(b=R())+(c=R())^2048?f():[a,b,c]
 <p><a href="https://tio.run/##LYpBDoIwEADvvmRrKSnGA4qLL/DC1WiyFlAUu4Q2pjG@3UrUuUwymSs9yJmxG7yyXDcxVhiw3JG/pCPZmu8g5rnWMnvpWYsWSyCsQAgJp7/N18eFXubbFsR6T8kpMYfY8ggBdRE2mS6kDMKwddw3ac9nmEYR3zz4bopRKefJ3JTrng2ufnwA" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>Silly. Assumes infinite stack.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 13 bytes</h1>
+<div id="pu1" class="pu"><h1>Google Sheets, 107 bytes</h1>
+<pre><code>=let(f,lambda(f,let(α,randbetween(448,800),β,randbetween(448,800),γ,2048-α-β,if(γ&lt;801,{α,β,γ},f(f)))),f(f))
+</code></pre>
+<p>None of the three numbers can be less than 448 because 2,048 - 2 * 800 = 448. The first two can therefore be randomly chosen from the range <code>[448..800]</code>, and the remainder constitutes the third number, unless it is greater than 800, in which case we re-evaluate recursively.</p>
+<p>The results appear highly uniform. Tested a sample of 1,000 results through 50 rounds.</p>
+<p><img src="https://i.sstatic.net/z2GnZY5n.png" alt="screenshot" /></p>
+<p>Ungolfed:</p>
+<pre><code>=let( 
+  f, lambda(f, let(
+    α, randbetween(448, 800), 
+    β, randbetween(448, 800), 
+    γ, 2048 - α - β, 
+    if(γ &lt; 801, 
+      { α, β, γ }, 
+      f(f) 
+    ) 
+  )), 
+  f(f) 
+)
+</code></pre>
+</div>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 13 bytes</h1>
 <pre><code>800ɾ3↔'∑k¦=;℅
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCI4MDDJvjPihpQn4oiRa8KmPTvihIUiLCIiLCIiXQ==" rel="nofollow noreferrer">Try it Online!</a></p>
