--- a/q/248245.html
+++ b/q/248245.html
@@ -26,10 +26,10 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>006</td><td>Brachylog</td><td>240425T191621Z</td><td><a href="https://codegolf.stackexchange.com/questions/248245/make-a-list-flat/272812#272812">DLosc</a></td></tr>
-<tr d-ix="1"><td>140</td><td>Go</td><td>240425T143052Z</td><td><a href="https://codegolf.stackexchange.com/questions/248245/make-a-list-flat/272808#272808">bigyihsu</a></td></tr>
-<tr d-ix="2"><td>007</td><td>Vyxal 3</td><td>240424T180546Z</td><td><a href="https://codegolf.stackexchange.com/questions/248245/make-a-list-flat/272783#272783">pacman25</a></td></tr>
-<tr d-ix="3"><td>011</td><td>Uiua</td><td>240424T024501Z</td><td><a href="https://codegolf.stackexchange.com/questions/248245/make-a-list-flat/272767#272767">noodle m</a></td></tr>
+<tr d-ix="0"><td>011</td><td>Uiua</td><td>240424T024501Z</td><td><a href="https://codegolf.stackexchange.com/questions/248245/make-a-list-flat/272767#272767">noodle p</a></td></tr>
+<tr d-ix="1"><td>006</td><td>Brachylog</td><td>240425T191621Z</td><td><a href="https://codegolf.stackexchange.com/questions/248245/make-a-list-flat/272812#272812">DLosc</a></td></tr>
+<tr d-ix="2"><td>140</td><td>Go</td><td>240425T143052Z</td><td><a href="https://codegolf.stackexchange.com/questions/248245/make-a-list-flat/272808#272808">bigyihsu</a></td></tr>
+<tr d-ix="3"><td>007</td><td>Vyxal 3</td><td>240424T180546Z</td><td><a href="https://codegolf.stackexchange.com/questions/248245/make-a-list-flat/272783#272783">pacman25</a></td></tr>
 <tr d-ix="4"><td>085</td><td>C gcc m32</td><td>220612T044918Z</td><td><a href="https://codegolf.stackexchange.com/questions/248245/make-a-list-flat/248496#248496">c--</a></td></tr>
 <tr d-ix="5"><td>029</td><td>sed</td><td>240415T145540Z</td><td><a href="https://codegolf.stackexchange.com/questions/248245/make-a-list-flat/272601#272601">guest430</a></td></tr>
 <tr d-ix="6"><td>005</td><td>Uiua 0.11.0</td><td>240415T044131Z</td><td><a href="https://codegolf.stackexchange.com/questions/248245/make-a-list-flat/272595#272595">Tbw</a></td></tr>
@@ -55,7 +55,14 @@
 <tr d-ix="26"><td>053</td><td>Charcoal</td><td>220606T000543Z</td><td><a href="https://codegolf.stackexchange.com/questions/248245/make-a-list-flat/248260#248260">Neil</a></td></tr>
 <tr d-ix="27"><td>008</td><td>sh + coreutils</td><td>220605T212621Z</td><td><a href="https://codegolf.stackexchange.com/questions/248245/make-a-list-flat/248254#248254">matteo_c</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/JCumin/Brachylog" rel="nofollow noreferrer">Brachylog</a>, <s>11</s> 6 bytes</h1>
+<div id="pu0" class="pu"><h1>Uiua, 11 bytes</h1>
+<pre><code>⊜⋕±+17.$&quot;_&quot;
+</code></pre>
+<p><a href="https://uiua.org/pad?src=0_11_0-dev_1__RiDihpAg4oqc4ouVwrErMTcuJCJfIgoKRiB7fQpGIHt7M30gezMge3s2fX19fQpGIHt7fSB7fX0KRiB7ezEgNCA2fSB7MSB7MiA2NyB7NSA3fX19fQo=" rel="nofollow noreferrer">Try it!</a></p>
+<p>Tbw’s solution is more practical and shorter but I thought this version was kinda fun.</p>
+<p>Instead of actually flattening the list, this takes the string representation of the array and picks just the digits from it. This gets the digits by adding 17 to each character's codepoint, mapping digits to the uppercase Latin letters and mapping all the other characters to various symbols, and taking the sign of each character. In Uiua taking the sign of a character checks if it is uppercase (1), lowercase (-1), or symbol (0), so this code just gives a mask of all the digits.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/JCumin/Brachylog" rel="nofollow noreferrer">Brachylog</a>, <s>11</s> 6 bytes</h1>
 <p><em>-5 bytes thanks to <a href="https://codegolf.stackexchange.com/users/41723/fatalize">Fatalize</a></em></p>
 <pre><code>ℤg|↰ᵐc
 </code></pre>
@@ -70,7 +77,7 @@
      c  and flatten the result once
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://go.dev" rel="nofollow noreferrer">Go</a>, 140 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://go.dev" rel="nofollow noreferrer">Go</a>, 140 bytes</h1>
 <pre class="lang-go prettyprint-override"><code>func f(s[]any)(o[]any){if len(s)&lt;1{return}
 for _,e:=range s{switch e:=e.(type){case[]any:o=append(o,f(e)...)
 default:o=append(o,e)}}
@@ -80,17 +87,11 @@ return}
 <p>Recursive function that returns a slice.</p>
 <p>Goes through each element and switches on the type of the element. If it's a slice, recurse and append the result. Otherwise, append the element.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3" rel="nofollow noreferrer">Vyxal 3</a>, 7 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3" rel="nofollow noreferrer">Vyxal 3</a>, 7 bytes</h1>
 <pre><code>&quot;\d+&quot;y⌊
 </code></pre>
 <p><a href="https://vyxal.github.io/latest.html#WyIiLCIiLCJcIlxcZCtcInnijIoiLCIiLCJbWzEsIDQsIDZdLCBbMSwgWzIsIDY3LCBbNSwgN11dXSIsIjMuNC4yIl0=" rel="nofollow noreferrer">Try it Online!</a>
 The one byte built in is boring, so I just get all the regex matches of numbers in the input list as a string and then convert back to numbers.</p>
-</div>
-<div id="pu3" class="pu"><h1>Uiua, 11 bytes</h1>
-<pre><code>⊜⋕±+17.$&quot;_&quot;
-</code></pre>
-<p><a href="https://uiua.org/pad?src=0_11_0-dev_1__RiDihpAg4oqc4ouVwrErMTcuJCJfIgoKRiB7fQpGIHt7M30gezMge3s2fX19fQpGIHt7fSB7fX0KRiB7ezEgNCA2fSB7MSB7MiA2NyB7NSA3fX19fQo=" rel="nofollow noreferrer">Try it!</a></p>
-<p>Tbw’s solution is more practical and shorter but I thought this version was kinda fun. This converts the input to a string representation, adds 17 to each codepoint in order for 0..9 to get mapped to A..J. This leaves <code>{</code>, <code>}</code>, and <code> </code> as non-letters, so when passed to <code>±</code> this effectively just gives a mask of the digits in the string. Finally the string is partitioned by this mask, with each segment getting parsed as an integer.</p>
 </div>
 <div id="pu4" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a> <code>-m32</code>, <s>114</s> <s>99</s> <s>89</s> 85 bytes</h1>
 <ul>
