--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240728T141025Z
+"   /golfscore                                      20240728T145015Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/187245.html">Analog is Obtuse!                               : 0187245</a>
 <a href="q/273996.html">Is it an option for the ls utility specified in : 0273996</a>
 <a href="q/263135.html">Print this diamond gone beautifully wrong       : 0263135</a>
 <a href="q/274485.html">Find the newest element                         : 0274485</a>
