--- a/q/274485.html
+++ b/q/274485.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>002</td><td>Jelly</td><td>240728T154156Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274513#274513">Unrelate</a></td></tr>
+<tr d-ix="0"><td>002</td><td>Brachylog</td><td>240728T154156Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274513#274513">Unrelate</a></td></tr>
 <tr d-ix="1"><td>002</td><td>Jelly</td><td>240728T154153Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274512#274512">Jonathan</a></td></tr>
 <tr d-ix="2"><td>036</td><td>Google Sheets</td><td>240728T102209Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274491#274491">doubleun</a></td></tr>
 <tr d-ix="3"><td>008</td><td>Charcoal</td><td>240728T135554Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274508#274508">Neil</a></td></tr>
@@ -45,11 +45,7 @@
 <tr d-ix="16"><td>002</td><td>APL Dyalog Vision</td><td>240728T095611Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274487#274487">Ad&#225;</a></td></tr>
 <tr d-ix="17"><td>002</td><td>Vyxal</td><td>240728T095024Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274486#274486">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 2 bytes</h1>
-<pre><code>QṪ
-</code></pre>
-<p><a href="https://tio.run/##y0rNyan8/z/w4c5V////d9R1cvRz9AGTfo66Po5OAA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
-<h1><a href="https://github.com/JCumin/Brachylog" rel="nofollow noreferrer">Brachylog</a>, 2 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/JCumin/Brachylog" rel="nofollow noreferrer">Brachylog</a>, 2 bytes</h1>
 <pre><code>dt
 </code></pre>
 <p><a href="https://tio.run/##SypKTM6ozMlPN/r/P6Xk/38lR10nRz9HHzDp56jr4@ik9D8KAA" rel="nofollow noreferrer" title="Brachylog – Try It Online">Try it online!</a></p>
