--- a/q/68318.html
+++ b/q/68318.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>265</td><td>Pascal</td><td>240728T160000Z</td><td><a href="https://codegolf.stackexchange.com/questions/68318/chinese-zodiac-of-the-year/274514#274514">Kai Burg</a></td></tr>
+<tr d-ix="0"><td>181</td><td>Pascal</td><td>240728T160000Z</td><td><a href="https://codegolf.stackexchange.com/questions/68318/chinese-zodiac-of-the-year/274514#274514">Kai Burg</a></td></tr>
 <tr d-ix="1"><td>049</td><td>Vyxal</td><td>210910T112419Z</td><td><a href="https://codegolf.stackexchange.com/questions/68318/chinese-zodiac-of-the-year/235231#235231">emanresu</a></td></tr>
 <tr d-ix="2"><td>078</td><td>J</td><td>160330T080740Z</td><td><a href="https://codegolf.stackexchange.com/questions/68318/chinese-zodiac-of-the-year/76572#76572">Leaky Nu</a></td></tr>
 <tr d-ix="3"><td>112</td><td>Python 3</td><td>160101T142146Z</td><td><a href="https://codegolf.stackexchange.com/questions/68318/chinese-zodiac-of-the-year/68335#68335">Sherlock</a></td></tr>
@@ -44,37 +44,20 @@
 <tr d-ix="15"><td>085</td><td>MATL</td><td>160101T030209Z</td><td><a href="https://codegolf.stackexchange.com/questions/68318/chinese-zodiac-of-the-year/68328#68328">Luis Men</a></td></tr>
 <tr d-ix="16"><td>075</td><td>CJam</td><td>160101T020211Z</td><td><a href="https://codegolf.stackexchange.com/questions/68318/chinese-zodiac-of-the-year/68326#68326">Zach Gat</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h2>Pascal, 265 B</h2>
-<p>This complete <code>program</code> just requires a processor compliant with ISO standard 7185 “Standard Pascal” (level 0 is sufficient).
-In Pascal a <code>packed array[1‥N] of char</code> (with <code>N</code> &gt; 1) constitutes a string.
-An assignment of a too short string value is automatically extended with space characters to the string’s length.
-That means the program outputs <a href="https://CodeGolf.meta.StackExchange.com/a/24952/94076">trailing spaces</a>.</p>
-<pre class="lang-pascal prettyprint-override"><code>program z(input,output);var t:integer;s:packed array[1..7]of char;begin
-read(t);case t mod 12 of
-0:s:='Monkey';1:s:='Rooster';2:s:='Dog';3:s:='Pig';4:s:='Rat';5:s:='Ox';6:s:='Tiger';7:s:='Rabbit';8:s:='Dragon';9:s:='Snake';10:s:='Horse';11:s:='Goat'end;write(s)end.
+<div id="pu0" class="pu"><h2>Pascal, 181 B</h2>
+<p>This complete <code>program</code> require a processor supporting features of Extended Pascal as defined by ISO standard 10206, in particular the time‑related routines and data type.</p>
+<pre class="lang-pascal prettyprint-override"><code>program z(output);var t:timeStamp;begin
+getTimeStamp(t);write(subStr('Monkey RoosterDog    Pig    Rat    Ox     Tiger  Rabbit Dragon Snake  Horse  Goat   ',t.year mod 12*7+1,7))end.
 </code></pre>
 <p>Long:</p>
-<pre class="lang-pascal prettyprint-override"><code>program chineseZodiacOfTheYear(input, output);
+<pre class="lang-pascal prettyprint-override"><code>program chineseZodiacOfTheYear(output);
+    const
+        animal = 'Monkey RoosterDog    Pig    Rat    Ox     Tiger  Rabbit Dragon Snake  Horse  Goat   ';
     var
-        year: integer;
-        result: packed array[1‥7] of char;
+        now: timeStamp;
     begin
-        readLn(input, year);
-        case year mod 12 of
-             0: result ≔ 'Monkey';
-             1: result ≔ 'Rooster';
-             2: result ≔ 'Dog';
-             3: result ≔ 'Pig';
-             4: result ≔ 'Rat';
-             5: result ≔ 'Ox';
-             6: result ≔ 'Tiger';
-             7: result ≔ 'Rabbit';
-             8: result ≔ 'Dragon';
-             9: result ≔ 'Snake';
-            10: result ≔ 'Horse';
-            11: result ≔ 'Goat'
-        end;
-        writeLn(output, result)
+        getTimeStamp(now);
+        writeLn(output, trim(subStr(animal, now.year mod 12 * 7 + 1, 7)))
     end.
 </code></pre>
 <p>See also:
