--- a/q/274498.html
+++ b/q/274498.html
@@ -26,14 +26,34 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>013</td><td>Jelly</td><td>240728T191734Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274524#274524">Jonathan</a></td></tr>
-<tr d-ix="1"><td>093</td><td>Google Sheets</td><td>240728T123106Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274502#274502">doubleun</a></td></tr>
+<tr d-ix="0"><td>093</td><td>Google Sheets</td><td>240728T123106Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274502#274502">doubleun</a></td></tr>
+<tr d-ix="1"><td>013</td><td>Jelly</td><td>240728T191734Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274524#274524">Jonathan</a></td></tr>
 <tr d-ix="2"><td>028</td><td>APL+WIN</td><td>240728T165935Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274517#274517">Graham</a></td></tr>
 <tr d-ix="3"><td>021</td><td>K ngn/k</td><td>240728T125025Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274503#274503">akamayu</a></td></tr>
 <tr d-ix="4"><td>065</td><td>JavaScript Node.js</td><td>240728T122454Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274501#274501">l4m2</a></td></tr>
 <tr d-ix="5"><td>013</td><td>Vyxal</td><td>240728T120204Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274499#274499">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 13 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1>Google Sheets, 93 bytes</h1>
+<pre><code>=let(f,lambda(f,let(n,map(X1:Z1,lambda(_,int(352*rand()+448))),if(2^11=sum(n),n,f(f)))),f(f))
+</code></pre>
+<p>To ensure there's no bias, get three random integers in the range <code>[448..800]</code> and repeat until they add up to 2,048, instead of getting two integers and checking the remainder.</p>
+<p><img src="https://i.sstatic.net/z2GnZY5n.png" alt="screenshot" /></p>
+<p>Ungolfed:</p>
+<pre><code>=let( 
+  try_, lambda(try_, let(
+    α, randbetween(448, 800), 
+    β, randbetween(448, 800), 
+    γ, randbetween(448, 800), 
+    if(sum(α, β, γ) = 2048, 
+      hstack(α, β, γ), 
+      try_(try_) 
+    ) 
+  )), 
+  try_(try_) 
+)
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 13 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>800ṗ3S⁼¥Ƈ⁽¥/X
 </code></pre>
 <p>A niladic Link that yields a list of three positive integers less than <span class="math-container">\$801\$</span> that sum to <span class="math-container">\$2048\$</span>.</p>
@@ -67,26 +87,6 @@
     ¥          -      last two links as a dyad - f(Triple, i)
 800            -        800
    X           -        random choice {[1..800]}
-</code></pre>
-</div>
-<div id="pu1" class="pu"><h1>Google Sheets, 93 bytes</h1>
-<pre><code>=let(f,lambda(f,let(n,map(X1:Z1,lambda(_,int(352*rand()+448))),if(2^11=sum(n),n,f(f)))),f(f))
-</code></pre>
-<p>To ensure there's no bias, get random integers in the range <code>[448..800]</code> and repeat until they add up to 2,048.</p>
-<p><img src="https://i.sstatic.net/z2GnZY5n.png" alt="screenshot" /></p>
-<p>Ungolfed:</p>
-<pre><code>=let( 
-  try_, lambda(try_, let(
-    α, randbetween(448, 800), 
-    β, randbetween(448, 800), 
-    γ, randbetween(448, 800), 
-    if(sum(α, β, γ) = 2048, 
-      hstack(α, β, γ), 
-      try_(try_) 
-    ) 
-  )), 
-  try_(try_) 
-)
 </code></pre>
 </div>
 <div id="pu2" class="pu"><h1>APL+WIN, 28 bytes</h1>
