--- a/q/274485.html
+++ b/q/274485.html
@@ -26,21 +26,21 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>001</td><td>Japt v2.0a0 h</td><td>240728T183907Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274521#274521">Shaggy</a></td></tr>
-<tr d-ix="1"><td>022</td><td>Excel ms365</td><td>240728T181455Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274520#274520">JvdV</a></td></tr>
-<tr d-ix="2"><td>003</td><td>MATL</td><td>240728T173544Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274518#274518">Suever</a></td></tr>
-<tr d-ix="3"><td>002</td><td>Brachylog</td><td>240728T154156Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274513#274513">Unrelate</a></td></tr>
-<tr d-ix="4"><td>002</td><td>Jelly</td><td>240728T154153Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274512#274512">Jonathan</a></td></tr>
-<tr d-ix="5"><td>036</td><td>Google Sheets</td><td>240728T102209Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274491#274491">doubleun</a></td></tr>
-<tr d-ix="6"><td>008</td><td>Charcoal</td><td>240728T135554Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274508#274508">Neil</a></td></tr>
-<tr d-ix="7"><td>005</td><td>Haskell + hgl</td><td>240728T134833Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274506#274506">Wheat Wi</a></td></tr>
-<tr d-ix="8"><td>008</td><td>Retina 0.8.2</td><td>240728T134116Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274505#274505">Neil</a></td></tr>
-<tr d-ix="9"><td>004</td><td>K ngn/k</td><td>240728T133436Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274504#274504">akamayu</a></td></tr>
-<tr d-ix="10"><td>027</td><td>PowerShell</td><td>240728T121823Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274500#274500">user3141</a></td></tr>
-<tr d-ix="11"><td>036</td><td>Python 3</td><td>240728T115156Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274497#274497">matteo_c</a></td></tr>
-<tr d-ix="12"><td>015</td><td>Arturo</td><td>240728T112337Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274496#274496">chunes</a></td></tr>
-<tr d-ix="13"><td>003</td><td>Uiua SBCS</td><td>240728T105800Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274495#274495">chunes</a></td></tr>
-<tr d-ix="14"><td>058</td><td>JavaScript Node.js</td><td>240728T104100Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274493#274493">Andrew B</a></td></tr>
+<tr d-ix="0"><td>045</td><td>JavaScript Node.js</td><td>240728T104100Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274493#274493">Andrew B</a></td></tr>
+<tr d-ix="1"><td>001</td><td>Japt v2.0a0 h</td><td>240728T183907Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274521#274521">Shaggy</a></td></tr>
+<tr d-ix="2"><td>022</td><td>Excel ms365</td><td>240728T181455Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274520#274520">JvdV</a></td></tr>
+<tr d-ix="3"><td>003</td><td>MATL</td><td>240728T173544Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274518#274518">Suever</a></td></tr>
+<tr d-ix="4"><td>002</td><td>Brachylog</td><td>240728T154156Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274513#274513">Unrelate</a></td></tr>
+<tr d-ix="5"><td>002</td><td>Jelly</td><td>240728T154153Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274512#274512">Jonathan</a></td></tr>
+<tr d-ix="6"><td>036</td><td>Google Sheets</td><td>240728T102209Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274491#274491">doubleun</a></td></tr>
+<tr d-ix="7"><td>008</td><td>Charcoal</td><td>240728T135554Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274508#274508">Neil</a></td></tr>
+<tr d-ix="8"><td>005</td><td>Haskell + hgl</td><td>240728T134833Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274506#274506">Wheat Wi</a></td></tr>
+<tr d-ix="9"><td>008</td><td>Retina 0.8.2</td><td>240728T134116Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274505#274505">Neil</a></td></tr>
+<tr d-ix="10"><td>004</td><td>K ngn/k</td><td>240728T133436Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274504#274504">akamayu</a></td></tr>
+<tr d-ix="11"><td>027</td><td>PowerShell</td><td>240728T121823Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274500#274500">user3141</a></td></tr>
+<tr d-ix="12"><td>036</td><td>Python 3</td><td>240728T115156Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274497#274497">matteo_c</a></td></tr>
+<tr d-ix="13"><td>015</td><td>Arturo</td><td>240728T112337Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274496#274496">chunes</a></td></tr>
+<tr d-ix="14"><td>003</td><td>Uiua SBCS</td><td>240728T105800Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274495#274495">chunes</a></td></tr>
 <tr d-ix="15"><td>026</td><td>Python</td><td>240728T102653Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274492#274492">xnor</a></td></tr>
 <tr d-ix="16"><td>024</td><td>JavaScript ES6</td><td>240728T101535Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274489#274489">Arnauld</a></td></tr>
 <tr d-ix="17"><td>057</td><td>C tcc</td><td>240728T101650Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274490#274490">ovs</a></td></tr>
@@ -48,17 +48,23 @@
 <tr d-ix="19"><td>002</td><td>APL Dyalog Vision</td><td>240728T095611Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274487#274487">Ad&#225;</a></td></tr>
 <tr d-ix="20"><td>002</td><td>Vyxal</td><td>240728T095024Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274486#274486">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> v2.0a0 <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-h</code></a>, 1 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">byte</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, <s> 58 </s> 45 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>s=&gt;[a={},[...s].map(e=&gt;a[e]?0:a[e]=b=e),b][2]
+</code></pre>
+<p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/Z9m@7/Y1i460ba6VidaT0@vOFYvN7FAI9XWLjE6NdbewApE2SbZpmrqJMVGG8X@T87PK87PSdXLyU/XSNNQd9R1cvRz9AGTfo66Po5O6pqaXOiKgGL/AQ" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> v2.0a0 <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-h</code></a>, 1 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">byte</a></h1>
 <pre><code>â
 </code></pre>
 <p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=2.0a0&amp;flags=LWg&amp;code=4g&amp;input=IkEtQkFOQUwtQkFOQU5BLUxBQiI" rel="nofollow noreferrer">Try it</a></p>
 </div>
-<div id="pu1" class="pu"><h1>Excel ms365, 22 bytes</h1>
+<div id="pu2" class="pu"><h1>Excel ms365, 22 bytes</h1>
 <pre><code>=@TAKE(UNIQUE(A:A),-2)
 </code></pre>
 <p><a href="https://i.sstatic.net/6fNhItBM.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/6fNhItBM.png" alt="enter image description here" /></a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://esolangs.org/wiki/MATL" rel="nofollow noreferrer">MATL</a>, 3 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://esolangs.org/wiki/MATL" rel="nofollow noreferrer">MATL</a>, 3 bytes</h1>
 <pre><code>uJ)
 </code></pre>
 <p><a href="https://matl.io/?code=uJ%29&amp;inputs=%27A-BANAL-BANANA-LAB%27&amp;version=22.8.0" rel="nofollow noreferrer">Try it at matl.io</a></p>
@@ -69,7 +75,7 @@ J)   % Get the last element
      % Print implicitly 
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/JCumin/Brachylog" rel="nofollow noreferrer">Brachylog</a>, 2 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/JCumin/Brachylog" rel="nofollow noreferrer">Brachylog</a>, 2 bytes</h1>
 <pre><code>dt
 </code></pre>
 <p><a href="https://tio.run/##SypKTM6ozMlPN/r/P6Xk/38lR10nRz9HHzDp56jr4@ik9D8KAA" rel="nofollow noreferrer" title="Brachylog – Try It Online">Try it online!</a></p>
@@ -79,7 +85,7 @@ J)   % Get the last element
 <p><a href="https://ato.pxeger.com/run?1=m70iLzU7PzexJHHBgqWlJWm6FotKc5YUJyUXQ7kLtig56jo5-jn6gEk_R10fRycliBwA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>More <s>boring</s> banal nub-tail solutions.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 2 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 2 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>QṪ
 </code></pre>
 <p>A monadic Link that accepts a list and yields the newest element.</p>
@@ -90,7 +96,7 @@ Q  - deduplicate {A}
  Ṫ - tail {that}
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1>Google Sheets, 36 bytes</h1>
+<div id="pu6" class="pu"><h1>Google Sheets, 36 bytes</h1>
 <pre><code>=chooserows(unique(tocol(A:A,1)),-1)
 </code></pre>
 <p><strong>64 bytes</strong>:</p>
@@ -102,7 +108,7 @@ Q  - deduplicate {A}
 <p>Put the array in column <code>A1:A</code> and the formula in cell <code>B1</code>.</p>
 <p><img src="https://i.sstatic.net/cWoifoPg.png" alt="screenshot" /></p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 8 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 8 bytes</h1>
 <pre><code>§θ⌈Ｅθ⌕θι
 </code></pre>
 <p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMOxxDMvJbVCo1BHwTexIjO3NFfDN7EAxHXLzEsB0ZmaIGD9/7@jrpOjn6MPmPRz1PVxdPqvW5YDAA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation: Turned out to be a port of @xnor's answer.</p>
@@ -117,7 +123,7 @@ Q  - deduplicate {A}
            Implicitly print
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, 5 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, 5 bytes</h1>
 <pre><code>gj&lt;nb
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=bZBNDoIwEIXjllOMO03GxPJTkcAB3LEnxGAArZYfEU7jho3hTHoaB1DEaNKmed-8NzPptTkEl1MkZX2fiiTPihLOVSBFLKIQ3CKSVRgpr4J7q8p4YTaxsz_a6a5Xj4mSBCIFB8JMAUi2MMsLsCGekwLwwGNgWbBJS78DSABV1FAftE5KRfapL_F9BkZ-8hjIkH_lDKJ8lDXIpxPVusvb6mguzfnq2PajXUbplrKRa0Ue_oeauMafDn7_JXXdv08" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -149,7 +155,7 @@ Q  - deduplicate {A}
 <li><code>nχ</code> and <code>nxy</code> could use versions precomposed with <code>my</code> and <code>so</code>.</li>
 </ul>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 8 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 8 bytes</h1>
 <pre><code>D`.
 !`.$
 </code></pre>
@@ -161,13 +167,13 @@ Q  - deduplicate {A}
 </code></pre>
 <p>Keep the last remaining character.</p>
 </div>
-<div id="pu9" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 4 bytes</h1>
+<div id="pu10" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 4 bytes</h1>
 <p>The last <code>*|</code> unique <code>?</code> element.</p>
 <pre><code>*|?:
 </code></pre>
 <p><a href="https://ngn.bitbucket.io/k#eJxLs9Kqsbfi4kpzUHLUdXL0c/QBk36Ouj6OTkoAcrEHVA==" rel="nofollow noreferrer">Try it online!</a></p>
 </div>
-<div id="pu10" class="pu"><h1><a href="https://github.com/TryItOnline/TioSetup/wiki/Powershell" rel="nofollow noreferrer">PowerShell</a>, 27 bytes</h1>
+<div id="pu11" class="pu"><h1><a href="https://github.com/TryItOnline/TioSetup/wiki/Powershell" rel="nofollow noreferrer">PowerShell</a>, 27 bytes</h1>
 
 <pre class="lang-powershell prettyprint-override"><code>($args|% *ay|select -u)[-1]
 </code></pre>
@@ -177,13 +183,13 @@ Q  - deduplicate {A}
 </code></pre>
 <p>Converts the input string to a char array by calling the string's member &quot;ToCharArray&quot;, then selecting only unique characters, and picking the last char.</p>
 </div>
-<div id="pu11" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 36 bytes</h1>
+<div id="pu12" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 36 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda x:list({a:0for a in x})[-1]
 </code></pre>
 <p><a href="https://tio.run/##K6gsycjPM/7/P802JzE3KSVRocIqJ7O4RKM60cogLb9IIVEhM0@holYzWtcw9n9BUWZeiUaahpKjrpOjn6MPmPRz1PVxdFLS1PwPAA" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu12" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 15 bytes</h1>
+<div id="pu13" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 15 bytes</h1>
 <pre><code>$=&gt;[last∪&lt;=&amp;]
 </code></pre>
 <p><a href="https://i.sstatic.net/OlBT6a31.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/OlBT6a31.png" alt="running the code in arturo interpreter" /></a></p>
@@ -195,7 +201,7 @@ last   ; last element of...
 </code></pre>
 <p>This is two bytes shorter than <code>last unique&amp;</code>, but requires the latest version for <code>∪</code>, hence it won't work online yet.</p>
 </div>
-<div id="pu13" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a> <sup><a href="https://tinyurl.com/Uiua-SBCS-Apr-12" rel="nofollow noreferrer">SBCS</a></sup>, 3 bytes</h1>
+<div id="pu14" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a> <sup><a href="https://tinyurl.com/Uiua-SBCS-Apr-12" rel="nofollow noreferrer">SBCS</a></sup>, 3 bytes</h1>
 <pre><code>⊢⇌◴
 </code></pre>
 <p><a href="https://uiua.org/pad?src=0_12_0-dev_3__RiDihpAg4oqi4oeM4pe0CgpGICJBLUJBTkFMLUJBTkFOQS1MQUIiCkYgIjEyMzEyMzMyIgo=" rel="nofollow noreferrer">Try it!</a></p>
@@ -203,12 +209,6 @@ last   ; last element of...
   ◴  # ‎⁡deduplicate
 ⊢⇌   # ‎⁢last
 </code></pre>
-</div>
-<div id="pu14" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 58 bytes</h1>
-
-<pre class="lang-javascript prettyprint-override"><code>s=&gt;[a={},b='',[...s].map(e=&gt;(e in a)?0:[a[e]=1,b=e]),b][3]
-</code></pre>
-<p><a href="https://tio.run/##HcqxCsIwEADQX@mWBJJDcROuks6lP3DccK1XqdSkNOIifnsUlze9u7ykTPuyPUPKV60z1oItCb4/fkRjPAFAYXjIZhVbq82SGnGXw5mElPH4W8rOj0wnrlNOJa8Ka77Z2ZoYujjE/u8QQx8741z9Ag" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu15" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="noreferrer">Python</a>, 26 bytes</h1>
 
