--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240728T205917Z
+"   /golfscore                                      20240728T211027Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/247970.html">Sample integers that sum to one hundred         : 0247970</a>
 <a href="q/274498.html">Three up to 800  sum to 2048                    : 0274498</a>
 <a href="q/274485.html">Find the newest element                         : 0274485</a>
 <a href="q/118402.html">Tell me my screen resolution!                   : 0118402</a>
