--- a/q/85994.html
+++ b/q/85994.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>072</td><td>Setanta 0.10.4</td><td>240728T230639Z</td><td><a href="https://codegolf.stackexchange.com/questions/85994/count-of-as-and-bs-must-be-equal-did-you-get-it-computer/274531#274531">bb94</a></td></tr>
+<tr d-ix="0"><td>073</td><td>Setanta 0.10.4</td><td>240728T230639Z</td><td><a href="https://codegolf.stackexchange.com/questions/85994/count-of-as-and-bs-must-be-equal-did-you-get-it-computer/274531#274531">bb94</a></td></tr>
 <tr d-ix="1"><td>063</td><td>Turing Machine 2 tapes</td><td>240728T165556Z</td><td><a href="https://codegolf.stackexchange.com/questions/85994/count-of-as-and-bs-must-be-equal-did-you-get-it-computer/274516#274516">z..</a></td></tr>
 <tr d-ix="2"><td>080</td><td>TypeScript’s type system</td><td>231215T181001Z</td><td><a href="https://codegolf.stackexchange.com/questions/85994/count-of-as-and-bs-must-be-equal-did-you-get-it-computer/268567#268567">noodle p</a></td></tr>
 <tr d-ix="3"><td>003</td><td>Nekomata + e</td><td>230607T074304Z</td><td><a href="https://codegolf.stackexchange.com/questions/85994/count-of-as-and-bs-must-be-equal-did-you-get-it-computer/261618#261618">alephalp</a></td></tr>
@@ -137,11 +137,12 @@
 <tr d-ix="108"><td>022</td><td>Retina</td><td>160720T194436Z</td><td><a href="https://codegolf.stackexchange.com/questions/85994/count-of-as-and-bs-must-be-equal-did-you-get-it-computer/86002#86002">Leaky Nu</a></td></tr>
 <tr d-ix="109"><td>075</td><td>C Ansi</td><td>160720T193934Z</td><td><a href="https://codegolf.stackexchange.com/questions/85994/count-of-as-and-bs-must-be-equal-did-you-get-it-computer/86000#86000">dj0wns</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a> 0.10.4, 72 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a> 0.10.4, <s>72</s> 73 bytes</h1>
+<p><em>+1 byte to handle the empty case</em></p>
 <p>For odd-length strings, <code>n</code> will be a non-integer, so <code>s[i+n]</code> tries to access a character at a non-integer index. This returns <code>undefined</code>, which cannot be displayed in Setanta but can be manipulated, comparing unequal to any string and thus handling the odd-length case without an explicit check.</p>
-<pre><code>gniomh(s){n:=fad@s/2v:=0le i idir(0,n)v=v|s[i]!='a'|s[i+n]!='b'toradh!v}
+<pre><code>gniomh(s){n:=fad@s/2v:=n le i idir(0,n)v=v&amp;s[i]=='a'&amp;s[i+n]=='b'toradh v}
 </code></pre>
-<p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgIDQvp-eCw" rel="nofollow noreferrer">try-setanta.ie link</a></p>
+<p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgICIy9mbCw" rel="nofollow noreferrer">try-setanta.ie link</a></p>
 </div>
 <div id="pu1" class="pu"><h1>Turing Machine (2 tapes), 63 bytes</h1>
 <pre><code>a a _ a _ a &gt; &gt;
