--- a/q/152860.html
+++ b/q/152860.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>098</td><td>Pascal</td><td>240728T000000Z</td><td><a href="https://codegolf.stackexchange.com/questions/152860/compare-two-numbers-given-as-strings/274477#274477">Kai Burg</a></td></tr>
-<tr d-ix="1"><td>008</td><td>Excel / Google Sheets</td><td>240728T105137Z</td><td><a href="https://codegolf.stackexchange.com/questions/152860/compare-two-numbers-given-as-strings/274494#274494">z..</a></td></tr>
-<tr d-ix="2"><td>020</td><td>Uiua</td><td>240728T042946Z</td><td><a href="https://codegolf.stackexchange.com/questions/152860/compare-two-numbers-given-as-strings/274482#274482">ErikDaPa</a></td></tr>
+<tr d-ix="0"><td>015</td><td>Uiua</td><td>240728T042946Z</td><td><a href="https://codegolf.stackexchange.com/questions/152860/compare-two-numbers-given-as-strings/274482#274482">ErikDaPa</a></td></tr>
+<tr d-ix="1"><td>098</td><td>Pascal</td><td>240728T000000Z</td><td><a href="https://codegolf.stackexchange.com/questions/152860/compare-two-numbers-given-as-strings/274477#274477">Kai Burg</a></td></tr>
+<tr d-ix="2"><td>008</td><td>Excel / Google Sheets</td><td>240728T105137Z</td><td><a href="https://codegolf.stackexchange.com/questions/152860/compare-two-numbers-given-as-strings/274494#274494">z..</a></td></tr>
 <tr d-ix="3"><td>002</td><td>Thunno 2</td><td>230616T171551Z</td><td><a href="https://codegolf.stackexchange.com/questions/152860/compare-two-numbers-given-as-strings/261936#261936">The Thon</a></td></tr>
 <tr d-ix="4"><td>009</td><td>Juby</td><td>221014T153231Z</td><td><a href="https://codegolf.stackexchange.com/questions/152860/compare-two-numbers-given-as-strings/253211#253211">Jordan</a></td></tr>
 <tr d-ix="5"><td>030</td><td>Julia 1.0</td><td>221024T085657Z</td><td><a href="https://codegolf.stackexchange.com/questions/152860/compare-two-numbers-given-as-strings/253685#253685">amelies</a></td></tr>
@@ -94,7 +94,18 @@
 <tr d-ix="65"><td>004</td><td>J</td><td>180109T103455Z</td><td><a href="https://codegolf.stackexchange.com/questions/152860/compare-two-numbers-given-as-strings/152864#152864">FrownyFr</a></td></tr>
 <tr d-ix="66"><td>001</td><td>05AB1E</td><td>180109T102836Z</td><td><a href="https://codegolf.stackexchange.com/questions/152860/compare-two-numbers-given-as-strings/152863#152863">Emigna</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h2>Pascal, 98 B</h2>
+<div id="pu0" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a>, 15 bytes</h1>
+<pre><code>=∩(⋕▽∊:+@0⇡10.)
+</code></pre>
+<p><a href="https://www.uiua.org/pad?src=0_12_0-dev_3__PeKIqSjii5Xilr3iiIo6K0Aw4oehMTAuKSIwMDEwMDAxICIgIiAxMDAwMSAgIgo=" rel="nofollow noreferrer">Try it online!</a></p>
+<p><strong>Explanation:</strong></p>
+<pre><code>    ▽∊:+@0⇡10. -&gt; keeps numeric digits
+   ⋕           -&gt; parses the string
+ ∩(           )-&gt; do for both strings
+=              -&gt; check if both match
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h2>Pascal, 98 B</h2>
 <p>The string capabilities and the procedure <code>readStr</code> require a processor supporting features of Extended Pascal as laid out in ISO standard 10206.</p>
 <pre class="lang-pascal prettyprint-override"><code>type T=string(80);function f(A,B:T):Boolean;var x,y:integer;begin
 readStr(A+' '+B,x,y);f:=x=y end;
@@ -121,21 +132,11 @@ readStr(A+' '+B,x,y);f:=x=y end;
     end.
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1>Excel / Google Sheets, 8 bytes</h1>
+<div id="pu2" class="pu"><h1>Excel / Google Sheets, 8 bytes</h1>
 <pre class="lang-cpp prettyprint-override"><code>=-A1=-A2
 </code></pre>
 <p>or</p>
 <pre class="lang-cpp prettyprint-override"><code>=--A1=A2
-</code></pre>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a>, 20 bytes</h1>
-<pre><code>=∩(⋕▽∊:+@0⇡10.)
-</code></pre>
-<p><strong>Explanation:</strong></p>
-<pre><code>    ▽∊:+@0⇡10. -&gt; keeps numeric digits
-   ⋕           -&gt; parses the string
- ∩(           )-&gt; do for both strings
-=              -&gt; check if both match
 </code></pre>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://github.com/Thunno/Thunno2" rel="nofollow noreferrer">Thunno 2</a>, 2 <a href="https://github.com/Thunno/Thunno2/blob/main/docs/codepage.md" rel="nofollow noreferrer">bytes</a></h1>
