--- a/q/17305.html
+++ b/q/17305.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>191</td><td>Setanta</td><td>240725T205957Z</td><td><a href="https://codegolf.stackexchange.com/questions/17305/transpose-a-page-of-text/274442#274442">bb94</a></td></tr>
+<tr d-ix="0"><td>190</td><td>Setanta</td><td>240725T205957Z</td><td><a href="https://codegolf.stackexchange.com/questions/17305/transpose-a-page-of-text/274442#274442">bb94</a></td></tr>
 <tr d-ix="1"><td>106</td><td>R</td><td>240701T094454Z</td><td><a href="https://codegolf.stackexchange.com/questions/17305/transpose-a-page-of-text/273853#273853">int 21h </a></td></tr>
 <tr d-ix="2"><td>022</td><td>Perl 5 + plF M5.10.0</td><td>180806T120712Z</td><td><a href="https://codegolf.stackexchange.com/questions/17305/transpose-a-page-of-text/170065#170065">Dom Hast</a></td></tr>
 <tr d-ix="3"><td>031</td><td>Uiua</td><td>240705T125210Z</td><td><a href="https://codegolf.stackexchange.com/questions/17305/transpose-a-page-of-text/273942#273942">Joao-3</a></td></tr>
@@ -77,11 +77,12 @@
 <tr d-ix="48"><td>278</td><td>C</td><td>140103T154137Z</td><td><a href="https://codegolf.stackexchange.com/questions/17305/transpose-a-page-of-text/17325#17325">wjl</a></td></tr>
 <tr d-ix="49"><td>nan</td><td></td><td>140103T134038Z</td><td><a href="https://codegolf.stackexchange.com/questions/17305/transpose-a-page-of-text/17311#17311">marinus</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, 191 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, <s>191</s> 190 bytes</h1>
 <pre><code>gniomh(s){s=roinn@s(&quot;
-&quot;)t:=0u:=&quot;&quot;le i idir(0,fad@s)t=uas(t,fad(s[i]))le i idir(0,t){le j idir(0,fad@s)u+=(i&lt;fad(s[j])&amp;s[j][i])|&quot; &quot;nuair-a u!=&quot;&quot;&amp;u[-1]==&quot; &quot; u=cuid@u(0,fad@u-1)u+=&quot;\n&quot;}toradh u}
+&quot;)t:=0u:=&quot;&quot;le i idir(0,fad@s)t=uas(t,fad(s[i]))le i idir(0,t){le j idir(0,fad@s)u+=(i&lt;fad(s[j])&amp;s[j][i])|&quot; &quot;nuair-a u!=&quot;&quot;&amp;u[-1]==&quot; &quot; u=cuid@u(0,fad@u-1)u+=&quot;
+&quot;}toradh u}
 </code></pre>
-<p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgICIuPCYCw" rel="nofollow noreferrer">try-setanta.ie link</a></p>
+<p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgICwtbOICw" rel="nofollow noreferrer">try-setanta.ie link</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 106 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>for(j in Map(substr,list(s&lt;-scan(,&quot;&quot;,sep=&quot;\n&quot;)),n&lt;-1:max(nchar(s)),n))cat(ifelse(j==&quot;&quot;,&quot; &quot;,j),&quot;\n&quot;,sep=&quot;&quot;)
